# apertium-eng-sjt

./: Makefile.am  README  apertium-eng-sjt.eng-sjt.rtx  configure.ac  modes.xml
